
2008-02-13 tdb
 * Modified creation of database indices to use SQL standard CREATE [ UNIQUE ]
    INDEX, see #3261
 * Added get_column_type method to Database, which returns a column
    specification for the local database: modified most table creation to use
	it, see #3262
 * Added data set "cachemap" that is now used to manage cache ids/creating the
    cachemap table

2008-02-14 cjg
 * Added "billboard" div to input forms. Useful as a target for javascript.

2008-02-14 cjg
 * Added getEprintField to toolbox. 

2008-02-15 cjg
 * Added new message to default homepage.

2008-02-18 tdb
 * erase_data now recreates all eprints tables rather than destroying the
    database outright
 * Added migration code for cachemap
 * Allow --force to add/remove system fields
 * Support for Oracle DB! (10g)
 * Modified all use of SQL to quote database identifiers (tables, columns)
 * Added value_from_sql_row and sql_row_from_value methods to metafields to
    replace bespoke Name/Date/Time cases in Database.pm 
 * Added "dbdriver" database option to specific different database driver
 * Added create_sequence, create_index methods for creating sequences and
    indexes
 * Changed messages and login_tickets tables to be DataSets
 * Added "index" option to DataSets to control index and order sub-tables
    creation/use
 * Modified table creation to use _create_table
 * Replaced direct INSERT SQL with insert/insert_quoted methods
 * Added index_dequeue method to dequeue items from index_queue
 * Added get_sql_names method to fields, to get database column names
 * Added the current DB version to the "in old configuration" error
 * Added update_ticket_userid method to update user tickets
 * Added database driver information to Status screen
 * Added create_counters method to create database counters
 * Database upgrade steps from 3.0.7 to 3.0.8

2008-02-19 tdb
 * Changed 3.1 database to version 3.1.0
 * Added upgrading of cachemap dataset tables + counters, fixing #3272 and
    #3273